# project-template-ds

./: README.md  cookiecutter.json
cookiecutter.project_name/: pyproject.toml
{{cookiecutter.project_name}}/: .gitignore
