[tool.poetry]
name = "project_template"
version = "0.1.0"
description = ""
authors = ["Lilian Vital"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Same as Black.
line-length = 88

